--- a/SDG2 Zero Hunger.html
+++ b/SDG2 Zero Hunger.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SDGs Introduction</title>
+  <title>SDG 2 Zero Hunger</title>
   <link rel="stylesheet" href="styles.css"> <!-- External CSS file for styling -->
   <style>
 
