--- a/SDG2 Zero Hunger.html
+++ b/SDG2 Zero Hunger.html
@@ -3,16 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SDG 2 Zero Hunger</title>
-  <link rel="stylesheet" href="styles.css"> <!-- External CSS file for styling -->
+  <title>SDGs Introduction</title>
+  <link rel="stylesheet" href="styles.css">
   <style>
-
     header {
       background-color: #333333;
       padding: 10px;
       display: flex;
       align-items: center;
     }
+
     nav ul {
       list-style-type: none;
       margin: 0;
@@ -20,9 +20,11 @@
       overflow: hidden;
       flex-grow: 1;
     }
+
     nav ul li {
-      float: left;
+      display: inline-block;
     }
+
     nav ul li a {
       display: block;
       color: #ffffff;
@@ -32,133 +34,141 @@
       font-weight: bold;
       transition: color 0.3s ease-in-out;
     }
+
     nav ul li a:hover {
       background-color: #ffffff;
       color: #333333;
     }
+
     .logo {
-      max-width: 400px;
-      height: 60px;
+      max-width: 100%;
+      height: auto;
       margin-right: 20px;
     }
+
     body {
       font-family: Arial, sans-serif;
       color: #ffffff;
       line-height: 1.5;
       background-color: #222222;
+      margin: 0;
+      padding: 0;
     }
+
     h1, h2, h3 {
       color: #ffffff;
     }
+
     p {
       margin-bottom: 20px;
     }
+
     a {
       color: #4c9f38;
       transition: color 0.3s ease-in-out;
     }
+
     a:hover {
       color: #83d475;
     }
+
     footer {
       background-color: #333333;
       padding: 20px;
       text-align: center;
     }
+
     footer p {
       margin: 0;
       color: #ffffff;
       font-size: 14px;
     }
+
     .dropdown {
-  float: left;
-  overflow: hidden;
-}
+      position: relative;
+      display: inline-block;
+    }
 
-.dropdown .dropbtn {
-  font-size: 16px;
-  border: none;
-  outline: none;
-  color: white;
-  padding: 16px 16px;
-  background-color: inherit;
-  font-family: inherit;
-  margin: 0;
-  font-weight: bold;
-}
+    .dropdown .dropbtn {
+      font-size: 16px;
+      border: none;
+      outline: none;
+      color: white;
+      padding: 16px 16px;
+      background-color: inherit;
+      font-family: inherit;
+      margin: 0;
+      font-weight: bold;
+    }
 
-.navbar a:hover, .dropdown:hover .dropbtn {
-  background-color: white;
-  color: black;
-  font-weight: bold;
-}
+    .navbar a:hover, .dropdown:hover .dropbtn {
+      background-color: white;
+      color: black;
+      font-weight: bold;
+    }
 
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-}
+    .dropdown-content {
+      display: none;
+      position: absolute;
+      background-color: #f9f9f9;
+      min-width: 160px;
+      box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+      z-index: 1;
+    }
 
-.dropdown-content a {
-  float: none;
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-  text-align: left;
-}
+    .dropdown-content a {
+      float: none;
+      color: black;
+      padding: 12px 16px;
+      text-decoration: none;
+      display: block;
+      text-align: left;
+    }
 
-.dropdown-content a:hover {
-  background-color: #ddd;
-}
+    .dropdown-content a:hover {
+      background-color: #ddd;
+    }
 
-.dropdown:hover .dropdown-content {
-  display: block;
-}
+    .dropdown:hover .dropdown-content {
+      display: block;
+    }
   </style>
 </head>
 <body>
   <header>
-    <img src="logo-small.png" alt="School Logo" class="logo">
-        <nav>
+    <img src="logo-small.png" alt="School Logo" class="logo" height="400" width="400">
+    <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
-    <div class="dropdown">
-    <button class="dropbtn">SDGs
-      <i class="fa fa-caret-down"></i>
-    </button>
-    <div class="dropdown-content">
-      <a href="SDG2 Zero Hunger.html" target="_blank">SDG-2 Zero Hunger</a>
-     <!-- <a href="#">Link 2</a>
-      <a href="#">Link 3</a>//-->
-    </div>
-  </div>
+        <li class="dropdown">
+          <button class="dropbtn">SDGs
+            <i class="fa fa-caret-down"></i>
+          </button>
+          <div class="dropdown-content">
+            <a href="SDG2 Zero Hunger.html" target="_blank">SDG-2 Zero Hunger</a>
+          </div>
+        </li>
         <li><a href="#initiatives">Initiatives</a></li>
-        <li><a href="#" >Get Involved</a></li>
+        <li><a href="#">Get Involved</a></li>
         <li><a href="https://www.globalgoals.org/news/" target="_blank">News</a></li>
-            <div class="dropdown">
-    <button class="dropbtn">Contact
-      <i class="fa fa-caret-down"></i>
-    </button>
-    <div class="dropdown-content">
-      <a href="#" target="_blank">Mail: embassypublicschool@yahoo.co.in</a>
-     <!-- <a href="#">Link 2</a>
-      <a href="#">Link 3</a>//-->
-    </div>
-  </div>
+        <li class="dropdown">
+          <button class="dropbtn">Contact
+            <i class="fa fa-caret-down"></i>
+          </button>
+          <div class="dropdown-content">
+            <a href="#" target="_blank">Mail: embassypublicschool@yahoo.co.in</a>
+          </div>
+        </li>
       </ul>
     </nav>
-      <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-<lottie-player src="https://assets1.lottiefiles.com/private_files/lf30_QLsD8M.json"  background="transparent"  speed="1"  style="width: 70px; height: 70px;" hover   autoplay></lottie-player>
+    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+    <lottie-player src="https://assets1.lottiefiles.com/private_files/lf30_QLsD8M.json" background="transparent" speed="1" style="width: 70px; height: 70px;" hover autoplay></lottie-player>
   </header>
-   <section id="sdg2">
+  <section id="sdg2">
     <div class="sdg2-info">
-        <center>
-      <h1>SDG 2 Zero Hunger</h1>
-        </center>
+      <center>
+        <h1>SDG 2 Zero Hunger</h1>
+      </center>
       <h2>What is SDG 2?</h2>
       <p>SDG 2 aims to end hunger, achieve food security, improve nutrition, and promote sustainable agriculture. By 2030, the goal is to ensure that everyone has access to safe, nutritious, and sufficient food all year round.</p>
       <p>Hunger is a global crisis affecting millions of people, particularly in developing countries. It not only causes immense suffering but also hinders social and economic development.</p>
@@ -175,46 +185,31 @@
   </section>
   <section>
     <div>
-      <h1>IMPORTANCE OF SDG-2       </h1>
+      <h1>IMPORTANCE OF SDG-2</h1>
       <ul>
-        <li>Human health and well-being: Everyone has the right to access safe, nutritious, and sufficient food.
-</li>
-        <li>Social justice: Hunger and malnutrition disproportionately affect the poorest and most vulnerable people in society. SDG-2 can help to reduce inequality and promote social justice.
-</li>
-        <li>Peace and security: Hunger and malnutrition can lead to social unrest and conflict. SDG-2 can help to create a more peaceful and secure world.
-</li>
+        <li>Human health and well-being: Everyone has the right to access safe, nutritious, and sufficient food.</li>
+        <li>Social justice: Hunger and malnutrition disproportionately affect the poorest and most vulnerable people in society. SDG-2 can help to reduce inequality and promote social justice.</li>
+        <li>Peace and security: Hunger and malnutrition can lead to social unrest and conflict. SDG-2 can help to create a more peaceful and secure world.</li>
       </ul>
-
     </div>
   </section>
   <section>
     <div>
-      <h1>How India is implementing SDG 2
-</h1>
-      <p>The National Food Security Act (NFSA):* The NFSA guarantees food security to all citizens of India. The act provides subsidized food grains to eligible households through the Targeted Public Distribution System (TPDS).
-</p>
-      <p>The Mid-Day Meal Scheme:* The Mid-Day Meal Scheme provides free cooked meals to children in primary schools. The scheme aims to improve the nutritional status of children and reduce school dropout rates.</p>
-      <p>The Pradhan Mantri Krishi Sinchayee Yojana (PMKSY):* The PMKSY is a major irrigation program that aims to provide water for irrigation to all farmers in India. The program is expected to improve agricultural productivity and reduce hunger.
-</p>
-      <p>The National Mission for Sustainable Agriculture (NMSA):* The NMSA is a program that aims to promote sustainable agriculture in India. The program focuses on improving soil health, increasing crop diversification, and reducing the use of pesticides.
-</p>
+      <h1>How India is implementing SDG 2</h1>
+      <p>The National Food Security Act (NFSA): The NFSA guarantees food security to all citizens of India. The act provides subsidized food grains to eligible households through the Targeted Public Distribution System (TPDS).</p>
+      <p>The Mid-Day Meal Scheme: The Mid-Day Meal Scheme provides free cooked meals to children in primary schools. The scheme aims to improve the nutritional status of children and reduce school dropout rates.</p>
+      <p>The Pradhan Mantri Krishi Sinchayee Yojana (PMKSY): The PMKSY is a major irrigation program that aims to provide water for irrigation to all farmers in India. The program is expected to improve agricultural productivity and reduce hunger.</p>
+      <p>The National Mission for Sustainable Agriculture (NMSA): The NMSA is a program that aims to promote sustainable agriculture in India. The program focuses on improving soil health, increasing crop diversification, and reducing the use of pesticides.</p>
     </div>
-
   </section>
   <section>
     <div>
-      <h1 style="font-family:georgia,garamond">How can you help ??
-</h1>
-      <p>One way that we can help to achieve this goal is by donating food or food items to those in need. There are many organizations that collect and distribute food to people who are struggling to put food on the table. By donating food, we can help to ensure that everyone has access to the food they need to live a healthy and productive life.
-</p>
+      <h1 style="font-family:georgia,garamond">How can you help ??</h1>
+      <p>One way that we can help to achieve this goal is by donating food or food items to those in need. There are many organizations that collect and distribute food to people who are struggling to put food on the table. By donating food, we can help to ensure that everyone has access to the food they need to live a healthy and productive life.</p>
       <i><p>However, we wanted to ask for your help in making a special donation this year to help us reach our goal of Zero Hunger.</p></i>
       <center><h1>Thank You!</h1></center>
     </div>
-
   </section>
-
-
-
   <footer>
     <p>&copy; 2023 Your Organization. All rights reserved.</p>
   </footer>
