--- a/SDG2 Zero Hunger.html
+++ b/SDG2 Zero Hunger.html
@@ -136,7 +136,7 @@
 </head>
 <body>
   <header>
-    <img src="logo-small.png" alt="School Logo" class="logo" height="400" width="400">
+    <img src="Screenshot_2023-06-29_125918-removebg-preview.png" alt="School Logo" class="logo" height="40" width="40">
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
