--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="styles.css"> <!-- External CSS file for styling -->
   <style>
 
+
     header {
       background-color: #333333;
       padding: 10px;
@@ -191,43 +192,34 @@ background-color: #333333;
        background-color: #373b40;
     }
 
-
   </style>
 </head>
 <body>
   <header>
-    <img src="logo-small.png" alt="School Logo" class="logo">
+    <img src="Screenshot_2023-06-29_125918-removebg-preview.png" alt="School Logo" class="logo">
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
-    <div class="dropdown">
-    <button class="dropbtn">SDGs
-      <i class="fa fa-caret-down"></i>
-    </button>
-    <div class="dropdown-content">
-      <a href="SDG2 Zero Hunger.html" target="_blank">SDG-2 Zero Hunger</a>
-     <!-- <a href="#">Link 2</a>
-      <a href="#">Link 3</a>//-->
-    </div>
-  </div>
+        <li class="dropdown">
+          <a href="#" class="dropbtn">SDGs <i class="fa fa-caret-down"></i></a>
+          <div class="dropdown-content">
+            <a href="SDG2 Zero Hunger.html" target="_blank">SDG-2 Zero Hunger</a>
+          </div>
+        </li>
         <li><a href="#initiatives">Initiatives</a></li>
-        <li><a href="https://unfoundation.org/what-we-do/issues/sustainable-development-goals/" target="_blank"> Get Involved</a></li>
+        <li><a href="https://unfoundation.org/what-we-do/issues/sustainable-development-goals/" target="_blank">Get Involved</a></li>
         <li><a href="https://www.globalgoals.org/news/" target="_blank">News</a></li>
-            <div class="dropdown">
-    <button class="dropbtn">Contact
-      <i class="fa fa-caret-down"></i>
-    </button>
-    <div class="dropdown-content">
-      <a href="#" target="_blank">Mail: embassypublicschool@yahoo.co.in</a>
-     <!-- <a href="#">Link 2</a>
-      <a href="#">Link 3</a>//-->
-    </div>
-  </div>
+        <li class="dropdown">
+          <a href="#" class="dropbtn">Contact <i class="fa fa-caret-down"></i></a>
+          <div class="dropdown-content">
+            <a href="#" target="_blank">Mail: embassypublicschool@yahoo.co.in</a>
+          </div>
+        </li>
       </ul>
     </nav>
-      <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-<lottie-player src="https://assets1.lottiefiles.com/private_files/lf30_QLsD8M.json"  background="transparent"  speed="1"  style="width: 70px; height: 70px;" hover   autoplay></lottie-player>
   </header>
+
+ </header>
   <center>
   <section id="home">
     <div class="banner">
@@ -373,45 +365,6 @@ background-color: #333333;
     <p>&copy; 2023 (Group Name). All rights reserved.</p>
   </footer>
 
-<!--<section id="gallery">
-<center>
-  <h1>Gallery</h1>
-</center>
 
-<div class="gallery-wrapper">
-  <div class="gallery">
-    <img class="gallery-image" src="880946.jpg" alt="Image 1">
-    <img class="gallery-image" src="wp10564193.jpg" alt="Image 2">
-    <img class="gallery-image" src="581016-ford-mustang.jpg" alt="Image 3">
-
-  </div>
-</div>
-
-</section>
-
-
-
-
-
-
-
-  <script>
-const scrollSpeed = 10;
-
-
-function scrollGallery() {
-  const gallery = document.querySelector('.gallery');
-  gallery.scrollLeft += scrollSpeed;
-
-
-  if (gallery.scrollLeft >= gallery.scrollWidth - gallery.offsetWidth) {
-    gallery.scrollLeft = 0;
-  }
-}
-
-
-setInterval(scrollGallery, 100);
-  </script>.
-  //-->
 </body>
 </html>
