--- a/index.html
+++ b/index.html
@@ -351,8 +351,8 @@ background-color: #333333;
     </div>
 
     <div class="team-member-item">
-      <img src="team_member2.jpg" alt="Team Member 2" class="team-member-image">
-      <h3 class="team-member-name"></h3>
+      <img src="PUNYA.jpg" alt="Team Member 2" class="team-member-image">
+      <h3 class="team-member-name">Punya RP</h3>
       <p class="team-member-role">Event Manager</p>
     </div>
 
