--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@ background-color: #333333;
 
     <section class="team-member">
     <div class="team-member-item">
-      <img src="me the legend .jpg" alt="Team Member 1" class="team-member-image">
+      <img src="js.jpg" alt="Team Member 1" class="team-member-image">
       <h3 class="team-member-name">Janhav Siddarth C</h3>
       <p class="team-member-role">Technical Manager and Designer</p>
     </div>
