--- a/SDG2 Zero Hunger.html
+++ b/SDG2 Zero Hunger.html
@@ -148,8 +148,8 @@
             <a href="SDG2 Zero Hunger.html" target="_blank">SDG-2 Zero Hunger</a>
           </div>
         </li>
-        <li><a href="#initiatives">Initiatives</a></li>
-        <li><a href="#">Get Involved</a></li>
+        <li><a href="#hcyh">How can you help?</a></li>
+        <li><a href="https://unfoundation.org/what-we-do/issues/sustainable-development-goals/" target="_blank">Get Involved</a></li>
         <li><a href="https://www.globalgoals.org/news/" target="_blank">News</a></li>
         <li class="dropdown">
           <button class="dropbtn">Contact
@@ -202,7 +202,7 @@
       <p>The National Mission for Sustainable Agriculture (NMSA): The NMSA is a program that aims to promote sustainable agriculture in India. The program focuses on improving soil health, increasing crop diversification, and reducing the use of pesticides.</p>
     </div>
   </section>
-  <section>
+  <section id="hcyh">
     <div>
       <h1 style="font-family:georgia,garamond">How can you help ??</h1>
       <p>One way that we can help to achieve this goal is by donating food or food items to those in need. There are many organizations that collect and distribute food to people who are struggling to put food on the table. By donating food, we can help to ensure that everyone has access to the food they need to live a healthy and productive life.</p>
