--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@ background-color: #333333;
             <a href="SDG2 Zero Hunger.html" target="_blank">SDG-2 Zero Hunger</a>
           </div>
         </li>
-        <li><a href="#initiatives">Initiatives</a></li>
+        <li><a href="#ourgroup">Our Group</a></li>
         <li><a href="https://unfoundation.org/what-we-do/issues/sustainable-development-goals/" target="_blank">Get Involved</a></li>
         <li><a href="https://www.globalgoals.org/news/" target="_blank">News</a></li>
         <li class="dropdown">
@@ -264,7 +264,7 @@ background-color: #333333;
     </div>
   </section>
 
-  <section>
+  <section id="ourgroup">
     <h1>Our Group</h1>
     <p>"Teamwork is the ability to work together toward a common vision. The ability to direct individual accomplishments toward organizational objectives. It is the fuel that allows common people to attain uncommon results." </p>
     <p>With our Golden Team, we aim forward to create a Golden World for Everyone for a Happy living </p>
