--- a/index.html
+++ b/index.html
@@ -1,97 +1,66 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SDGs Introduction</title>
-  <link rel="stylesheet" href="styles.css"> <!-- External CSS file for styling -->
-  <style>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Ysabeau+SC:wght@1&display=swap" rel="stylesheet">
 
 
+<style>
+body {
+      margin:0;
+
+      font-family: Arial, sans-serif;
+      color: #ffffff;
+      line-height: 1.5;
+      background-color: #222222;
+}
+
+.topnav {
+  overflow: hidden;
+  background-color: #333;
+}
     header {
       background-color: #333333;
       padding: 10px;
       display: flex;
       align-items: center;
     }
-    nav ul {
-      list-style-type: none;
-      margin: 0;
-      padding: 0;
-      overflow: hidden;
-      flex-grow: 1;
-    }
-    nav ul li {
-      float: left;
-    }
-    nav ul li a {
-      display: block;
-      color: #ffffff;
-      text-align: center;
-      padding: 14px 16px;
-      text-decoration: none;
-      font-weight: bold;
-      transition: color 0.3s ease-in-out;
-    }
-    nav ul li a:hover {
-      background-color: #ffffff;
-      color: #333333;
-    }
-    .logo {
-      max-width: 400px;
-      height: 60px;
-      margin-right: 20px;
-    }
-    body {
-      font-family: Arial, sans-serif;
-      color: #ffffff;
-      line-height: 1.5;
-      background-color: #222222;
-    }
-    h1, h2, h3 {
-      color: #ffffff;
-    }
-    p {
-      margin-bottom: 20px;
-    }
-    a {
-      color: #4c9f38;
-      transition: color 0.3s ease-in-out;
-    }
-    a:hover {
-      color: #83d475;
-    }
-    footer {
-      background-color: #333333;
-      padding: 20px;
-      text-align: center;
-    }
-    footer p {
-      margin: 0;
-      color: #ffffff;
-      font-size: 14px;
-    }
-    .dropdown {
+.topnav a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.active {
+  background-color: #04AA6D;
+  color: white;
+}
+
+.topnav .icon {
+  display: none;
+}
+
+.dropdown {
   float: left;
   overflow: hidden;
 }
 
 .dropdown .dropbtn {
-  font-size: 16px;
+  font-size: 17px;
   border: none;
   outline: none;
   color: white;
-  padding: 16px 16px;
+  padding: 14px 16px;
   background-color: inherit;
   font-family: inherit;
   margin: 0;
-  font-weight: bold;
-}
-
-.navbar a:hover, .dropdown:hover .dropbtn {
-  background-color: white;
-  color: black;
-  font-weight: bold;
 }
 
 .dropdown-content {
@@ -112,25 +81,76 @@
   text-align: left;
 }
 
+.topnav a:hover, .dropdown:hover .dropbtn {
+  background-color: #555;
+  color: white;
+}
+
 .dropdown-content a:hover {
   background-color: #ddd;
+  color: black;
 }
 
 .dropdown:hover .dropdown-content {
   display: block;
 }
-.prf{
-float: left;
+
+@media screen and (max-width: 600px) {
+  .topnav a:not(:first-child), .dropdown .dropbtn {
+    display: none;
+  }
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
 }
-.name{
-float: left;
-}
-.role {
-float: left;
+
+@media screen and (max-width: 600px) {
+  .topnav.responsive {position: relative;}
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+  .topnav.responsive .dropdown {float: none;}
+  .topnav.responsive .dropdown-content {position: relative;}
+  .topnav.responsive .dropdown .dropbtn {
+    display: block;
+    width: 100%;
+    text-align: left;
+  }
 }
 .profile{
 background-color: #333333;
 }
+ footer {
+     background-color: #333333;
+     padding: 20px;
+     text-align: center;
+  }
+  footer p {
+    margin: 0;
+    color: #ffffff;
+    font-size: 14px;
+    }
+  a {
+      color: #4c9f38;
+      transition: color 1s ease-in-out;
+    }
+  a:hover {
+        color: #83d475;
+    }
+  .logo {
+      max-width: 300px;
+      height: 45px;
+
+      padding-left: 30px;
+    }
 .info{
   padding: -40px 2px;
   text-align: center;
@@ -172,55 +192,40 @@ background-color: #333333;
       position: relative;
     }
 
-    .gallery-wrapper {
-       width: 500px; /* Adjust the width as per your requirements */
-       overflow: auto;
-}
 
-    .gallery {
-       white-space: nowrap;
-}
-
-    .gallery-image {
-       display: inline-block;
-      width: 300px; /* Adjust the width as per your requirements */
-       height: auto;
-       margin: 5px;
-}
-
-    .team-member{
-       background-color: #373b40;
-    }
-
-  </style>
+</style>
 </head>
 <body>
-  <header>
-    <img src="Screenshot_2023-06-29_125918-removebg-preview.png" alt="School Logo" class="logo">
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropbtn">SDGs <i class="fa fa-caret-down"></i></a>
-          <div class="dropdown-content">
-            <a href="SDG2 Zero Hunger.html" target="_blank">SDG-2 Zero Hunger</a>
-          </div>
-        </li>
-        <li><a href="#ourgroup">Our Group</a></li>
-        <li><a href="https://unfoundation.org/what-we-do/issues/sustainable-development-goals/" target="_blank">Get Involved</a></li>
-        <li><a href="https://www.globalgoals.org/news/" target="_blank">News</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropbtn">Contact <i class="fa fa-caret-down"></i></a>
-          <div class="dropdown-content">
-            <a href="#" target="_blank">Mail: embassypublicschool@yahoo.co.in</a>
-          </div>
-        </li>
-      </ul>
-    </nav>
-  </header>
 
- </header>
-  <center>
+<div class="topnav" id="myTopnav">
+  <img src="Screenshot_2023-06-29_125918-removebg-preview.png" alt="School Logo" class="logo">
+  <a href="#home" class="active">Home</a>
+   <div class="dropdown">
+    <button class="dropbtn">SDGs
+      <i class="fa fa-caret-down"></i>
+    </button>
+    <div class="dropdown-content">
+      <a href="SDG2 Zero Hunger.html">SDG 2 Zero Hunger</a>
+    </div>
+  </div>
+  <a href="#ourgroup">Our Group</a>
+  <a href="https://unfoundation.org/what-we-do/issues/sustainable-development-goals/">Get Involved</a>
+
+  <a href="https://www.globalgoals.org/news/">News</a>
+
+    <div class="dropdown">
+    <button class="dropbtn">Contact
+      <i class="fa fa-caret-down"></i>
+    </button>
+    <div class="dropdown-content">
+
+      <a href="#">Mail: embassypublicschool@yahoo.co.in</a>
+    </div>
+  </div>
+  <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
+</div>
+
+<center>
   <section id="home">
     <div class="banner">
       <h1>Working Towards Sustainable Development Goals</h1>
@@ -257,7 +262,7 @@ background-color: #333333;
       <p>The SDGs were formulated in 2015 by the United Nations General Assembly (UNGA) as part of the Post-2015 Development Agenda, which sought to create a future global development framework to succeed the Millennium Development Goals, which ended that year. They were formally articulated and adopted in a UNGA resolution called the 2030 Agenda, known colloquially as Agenda 2030. On 6 July 2017, the SDGs were made more actionable by a UNGA resolution that identifies specific targets for each goal and provides indicators to measure progress. Most targets are to be achieved by 2030, although some have no end date. The International Monetary Fund (IMF) has also taken the initiative to achieve the SDGs by offering their support to developing countries. For example, the IMF works to reduce poverty in low-income developing countries by offering financial support during the COVID-19 pandemic.</p>
       <p>There are cross-cutting issues and synergies between the different goals; for example, for SDG 13 on climate action, the IPCC sees robust synergies with SDGs 3 (health), 7 (clean energy), 11 (cities and communities), 12 (responsible consumption and production) and 14 (oceans).: 70  Conversely, critics and observers have also identified trade-offs between the goals,: 67 such as between ending hunger and promoting environmental sustainability.: 26  Other concerns include there being too many goals (resulting in compounding trade-offs), a weak emphasis on environmental sustainability, and difficulties tracking qualitative indicators.</p>
 
-      <a href="https://www.globalgoals.org/" class="cta-button" target="_blank">Learn About SDG's</a>
+      <a href="https://www.globalgoals.org/" target="_blank">Learn About SDGs</a>
     <br>
 
     <p><i>Source: Wikipedia</i></p>
@@ -286,26 +291,12 @@ background-color: #333333;
 
   </section>
 
-  <br>
-  <br>
-
-    <section class="team-member">
-    <div class="team-member-item">
-      <img src="js.jpg" alt="Team Member 1" class="team-member-image">
-      <h3 class="team-member-name">Janhav Siddarth C</h3>
-      <p class="team-member-role">Technical Manager and Designer</p>
-    </div>
-
-    <div class="team-member-item">
-      <img src="varshith.jpg" alt="Team Member 2" class="team-member-image">
-      <h3 class="team-member-name">Varshith Raj</h3>
-      <p class="team-member-role">Data Analyst Lead</p>
-    </div>
-
-  </section>
 
   <br>
   <br>
+
+
+
 
     <section class="team-member">
     <div class="team-member-item">
@@ -321,7 +312,20 @@ background-color: #333333;
     </div>
 
   </section>
+    <section class="team-member">
+    <div class="team-member-item">
+      <img src="ananya.jpg" alt="Team Member 1" class="team-member-image">
+      <h3 class="team-member-name">Ananya.KH</h3>
+      <p class="team-member-role">Data Analyst</p>
+    </div>
 
+    <div class="team-member-item">
+      <img src="PUNYA.jpg" alt="Team Member 2" class="team-member-image">
+      <h3 class="team-member-name">Punya RP</h3>
+      <p class="team-member-role">Event Manager</p>
+    </div>
+
+  </section>
   <br>
   <br>
 
@@ -345,15 +349,15 @@ background-color: #333333;
 
     <section class="team-member">
     <div class="team-member-item">
-      <img src="ananya.jpg" alt="Team Member 1" class="team-member-image">
-      <h3 class="team-member-name">Ananya.KH</h3>
-      <p class="team-member-role">Data Analyst</p>
+      <img src="js.jpg" alt="Team Member 1" class="team-member-image">
+      <h3 class="team-member-name">Janhav Siddarth C</h3>
+      <p class="team-member-role">Technical Manager</p>
     </div>
 
     <div class="team-member-item">
-      <img src="PUNYA.jpg" alt="Team Member 2" class="team-member-image">
-      <h3 class="team-member-name">Punya RP</h3>
-      <p class="team-member-role">Event Manager</p>
+      <img src="varshith.jpg" alt="Team Member 2" class="team-member-image">
+      <h3 class="team-member-name">Varshith Raj</h3>
+      <p class="team-member-role">Data Analyst Lead</p>
     </div>
 
   </section>
@@ -361,10 +365,24 @@ background-color: #333333;
   <br>
   <br>
 
+
+
     <footer>
     <p>&copy; 2023 (Group Name). All rights reserved.</p>
   </footer>
 
+
+
+<script>
+function myFunction() {
+  var x = document.getElementById("myTopnav");
+  if (x.className === "topnav") {
+    x.className += " responsive";
+  } else {
+    x.className = "topnav";
+  }
+}
+</script>
 
 </body>
 </html>
