--- a/SDG2 Zero Hunger.html
+++ b/SDG2 Zero Hunger.html
@@ -11,8 +11,7 @@
 <style>
 body {
       margin:0;
-
-      font-family: Arial, sans-serif;
+      font-family: 'Quantico', serif;
       color: #ffffff;
       line-height: 1.5;
       background-color: #222222;
