--- a/index.html
+++ b/index.html
@@ -5,14 +5,13 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Ysabeau+SC:wght@1&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Agdasima&family=Ysabeau+SC:wght@1&display=swap" rel="stylesheet">
 
 
 <style>
 body {
       margin:0;
-
-      font-family: Arial, sans-serif;
+      font-family: 'Quantico', serif;
       color: #ffffff;
       line-height: 1.5;
       background-color: #222222;
@@ -27,6 +26,9 @@ body {
       padding: 10px;
       display: flex;
       align-items: center;
+    }
+    #pt{
+    color="#3480eb"
     }
 .topnav a {
   float: left;
@@ -229,7 +231,7 @@ background-color: #333333;
   <section id="home">
     <div class="banner">
       <h1>Working Towards Sustainable Development Goals</h1>
-      <p>Join us in achieving a world with Zero Hunger</p>
+      <p id="pt">Join us in achieving a world with Zero Hunger</p>
 
     </div>
   </section>
