--- a/index.html
+++ b/index.html
@@ -7,200 +7,13 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Agdasima&family=Ysabeau+SC:wght@1&display=swap" rel="stylesheet">
 
+<link rel="stylesheet" type="text/css" href="style.css" />
 
-<style>
-body {
-      margin:0;
-      font-family: 'Quantico', serif;
-      color: #ffffff;
-      line-height: 1.5;
-      background-color: #222222;
-}
-
-.topnav {
-  overflow: hidden;
-  background-color: #333;
-}
-    header {
-      background-color: #333333;
-      padding: 10px;
-      display: flex;
-      align-items: center;
-    }
-    #pt{
-    color="#3480eb"
-    }
-.topnav a {
-  float: left;
-  display: block;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-}
-
-.active {
-  background-color: #04AA6D;
-  color: white;
-}
-
-.topnav .icon {
-  display: none;
-}
-
-.dropdown {
-  float: left;
-  overflow: hidden;
-}
-
-.dropdown .dropbtn {
-  font-size: 17px;
-  border: none;
-  outline: none;
-  color: white;
-  padding: 14px 16px;
-  background-color: inherit;
-  font-family: inherit;
-  margin: 0;
-}
-
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-}
-
-.dropdown-content a {
-  float: none;
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-  text-align: left;
-}
-
-.topnav a:hover, .dropdown:hover .dropbtn {
-  background-color: #555;
-  color: white;
-}
-
-.dropdown-content a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-.dropdown:hover .dropdown-content {
-  display: block;
-}
-
-@media screen and (max-width: 600px) {
-  .topnav a:not(:first-child), .dropdown .dropbtn {
-    display: none;
-  }
-  .topnav a.icon {
-    float: right;
-    display: block;
-  }
-}
-
-@media screen and (max-width: 600px) {
-  .topnav.responsive {position: relative;}
-  .topnav.responsive .icon {
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
-  .topnav.responsive a {
-    float: none;
-    display: block;
-    text-align: left;
-  }
-  .topnav.responsive .dropdown {float: none;}
-  .topnav.responsive .dropdown-content {position: relative;}
-  .topnav.responsive .dropdown .dropbtn {
-    display: block;
-    width: 100%;
-    text-align: left;
-  }
-}
-.profile{
-background-color: #333333;
-}
- footer {
-     background-color: #333333;
-     padding: 20px;
-     text-align: center;
-  }
-  footer p {
-    margin: 0;
-    color: #ffffff;
-    font-size: 14px;
-    }
-  a {
-      color: #4c9f38;
-      transition: color 1s ease-in-out;
-    }
-  a:hover {
-        color: #83d475;
-    }
-  .logo {
-      max-width: 300px;
-      height: 45px;
-
-      padding-left: 30px;
-    }
-.info{
-  padding: -40px 2px;
-  text-align: center;
-}
-    .team-member {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      align-items: center;
-    }
-
-    .team-member-item {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      margin: 20px;
-      text-align: center;
-    }
-
-    .team-member-image {
-      width: 150px;
-      height: 150px;
-      object-fit: cover;
-      border-radius: 50%;
-    }
-
-    .team-member-name {
-      font-weight: bold;
-      margin-top: 10px;
-    }
-
-    .team-member-role {
-      font-style: italic;
-      margin-top: 5px;
-    .gallery {
-      width: 500px;
-      height: 300px;
-      overflow: hidden;
-      position: relative;
-    }
-
-
-</style>
 </head>
 <body>
 
 <div class="topnav" id="myTopnav">
-  <img src="Screenshot_2023-06-29_125918-removebg-preview.png" alt="School Logo" class="logo">
+
   <a href="#home" class="active">Home</a>
    <div class="dropdown">
     <button class="dropbtn">SDGs
@@ -221,7 +34,7 @@ background-color: #333333;
     </button>
     <div class="dropdown-content">
 
-      <a href="#">Mail: embassypublicschool@yahoo.co.in</a>
+      <a  href="mailto:embassypublicschool@yahoo.co.in">Mail: embassypublicschool@yahoo.co.in</a>
     </div>
   </div>
   <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
