--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 
 <div class="topnav" id="myTopnav">
 
+
+
+
   <a href="#home" class="active">Home</a>
    <div class="dropdown">
     <button class="dropbtn">SDGs
@@ -38,13 +41,20 @@
     </div>
   </div>
   <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
+
 </div>
 
 <center>
+
   <section id="home">
     <div class="banner">
+             <marquee>
+           <h1>Miracle Workers</h1>
+
+       </marquee>
       <h1>Working Towards Sustainable Development Goals</h1>
       <p id="pt">Join us in achieving a world with Zero Hunger</p>
+
 
     </div>
   </section>
